# skn_ds

./: .gitattributes  pyproject.toml
nbs/: model.ipynb
src/config/: config.py
src/preprocessing/: preprocessing_funcs.py
