[tool.poetry]
name = "skn-ds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
plotly = "^5.18.0"
mlflow = "^2.8.0"
missingno = "^0.5.2"
nbformat = "^5.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
